(library
 (name guile)
 (public_name guile.guile)
 (libraries ctypes ctypes.foreign str bindings sexplib)
 (c_library_flags (:include c_library_flags.sexp))
 (ocamlopt_flags (-ccopt (:include ccopts.sexp)))
 (foreign_stubs
  (language c)
  (names guile_stubs)
  (flags (:include c_flags.sexp))
 )
)


(rule
  (targets c_flags.sexp c_library_flags.sexp ccopts.sexp)
  (deps    (:x ../config/discover.exe))
  (action  (run %{x})))

(rule
  (targets bindings_stubs.ml)
  (deps ../stubgen/bindings_stubs_gen.exe)
  (action (with-stdout-to %{targets} (run %{deps} -ml))))

(env
  (dev
    (flags (:standard -w -27 -w -9))))
